--- a/new-training/style.css
+++ b/new-training/style.css
@@ -5,100 +5,74 @@
 }
 
 body{
-    height: 100vh;
+   
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .header{
-    height: 10vh;
     background-color: rgb(168, 214, 255);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
+   padding: 15px 20px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   position: relative;
+
 }
+
 .logo{
-    font-weight: bolder;
     font-size: 20px;
+    font-weight: bold;
 }
 
 .nav a{
-    margin-left: 15px;
     text-decoration: none;
     color: black;
     font-weight: 500;
-
+    padding: 15px;
+}
+.nav a:hover {
+   background-color:bisque;
 }
 
-.banner{
-    height: 15vh;
-    background-color: rgb(127, 165, 198);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#menu-toggle {
+    display: none;
+}
+.menu-icon{
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
 }
 
-.content{
-    height: 55vh;
-   display: flex;
-}
-
-.sidebar{
-    width:20%;
-    background-color: aquamarine;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.main-area{
-    width:80%;
-    background-color: rgb(8, 143, 98);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.footer{
-    height: 20vh;
-    background-color: cadetblue;
-    align-items: center;
-    justify-content: center;
-    display: flex;
+.menu-icon span{
+    width: 25px;
+    height: 3px;
+    background: black;
 }
 
 @media (max-width: 768px){
-
-    .header{
-       
-        flex-direction: column;
-        height: auto;
-        padding: 10px ;
-        
+    .menu-icon{
+        display: flex;
     }
-    .nav{
-        margin-top: 10px;
+  
+    .nav {
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100% ;
+        background: burlywood;
+        display: none;
+        flex-direction: column;
+        text-align: center;
     }
     .nav a{
-        margin: 0 10px;
-    }
-    .content{
-        flex-direction: column;
-        height: auto;
-    }
-     
-    .sidebar,
-    .main-area {
-        width: 100%;
-        height: 200px;
+        padding: 15px 0;
+        margin: 0;
+        border-top: 1px solid rgba(0, 0, 0,0.5);
     }
 
-
-    .banner,
-    .footer{
-        height: 150px;
+    #menu-toggle:checked + .menu-icon + .nav{
+        display: flex;
     }
 
 
 }
-
-    
-
