--- a/new-training/style.css
+++ b/new-training/style.css
@@ -33,11 +33,11 @@ body{
     
     
 }
-.nav a:hover{
+a:hover{
        
     border-radius: 20px;
     background-color: rgb(188, 255, 199);
-    transform: scale(5.7);
+    transform: scale(1.1);
     box-shadow: 0 0 15px 5px rgba(61, 142, 43, 0.7);
     
      
@@ -103,6 +103,7 @@ body{
     padding-bottom: 30px;
 }
 .services-boxes{
+   
     
     display: flex;
 
@@ -115,12 +116,197 @@ body{
     background-color: rgb(255, 255, 255);
     padding: 30px;
     flex: 1;
-    border-radius: 5px;
+    border-radius: 15px;
+   
+    
+}
+.service:hover{
+    cursor: pointer;
+     transform: scale(1.);
+  
+}
+.service h3{
+   
+    color: rgb(58, 119, 54);
+    font-weight: bold;
+    font-size: x-large;
+   
+
 }
 
 .service img{
 
     height: 40px;
+   padding-top:5px;
+
+}
+.contact {
+    padding: 60px 40px;
+    text-align: center;
+     background: linear-gradient(rgb(152, 255, 152));
+    
+}
+.contact-form{
+    max-width: 400px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: Arial, Helvetica, sans-serif;
+     line-height: 1.6;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    background: rgb(152, 255, 152);
+    align-items: center;
+    padding: 30px 40px;
+
+}
+.logo img{
+    height: 40px;
+  
+}
+
+.nav a{
+
+    text-decoration: none;
+    padding: 20px;
+    color: black;
+    font-size: large;
+    font-weight: bold;
+    transition: background-color 0.4s, transform 0.04s;
+  
+    
+    
+}
+a:hover{
+       
+    border-radius: 20px;
+    background-color: rgb(188, 255, 199);
+    transform: scale(1.1);
+    box-shadow: 0 0 15px 5px rgba(61, 142, 43, 0.7);
+    
+     
+}
+
+.hero{
+    height: 70vh;
+    background: linear-gradient(rgb(152, 255, 152),white);
+    color: rgb(82, 63, 0);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+}
+.hero h1 {
+    font-size: 50px;
+    
+
+}
+.hero p {
+    margin: 15px 0;
+    font-size: x-large;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    color: black;
+    padding-bottom: 30px ;
+
+}
+.btn{
+    background: rgb(152, 255, 152);
+    text-decoration: none;
+    border-radius: 15px;
+    padding: 10px ;
+    color: black;
+    font-size: larger;
+    font-size: 20px;  
+}
+.about {
+    padding: 60px 40px;
+    text-align: center;
+}
+.about h1{
+    margin: 20px;
+    
+}
+
+.about p{
+    font-size: larger;
+    font-weight: 400;
+
+}
+
+.services{
+    padding: 60px 40px;
+    text-align: center;
+    background: linear-gradient(white,rgb(152, 255, 152));
+
+}
+.services h1{
+    
+    padding-bottom: 30px;
+}
+.services-boxes{
+   
+    
+    display: flex;
+
+    margin-top: 30px ;
+    gap: 20px;
+    
+}
+.service{
+    cursor: pointer;
+    background-color: rgb(255, 255, 255);
+    padding: 30px;
+    flex: 1;
+    border-radius: 15px;
+   
+    
+}
+.service:hover{
+    cursor: pointer;
+     transform: scale(1.);
+  
+}
+.service h3{
+   
+    color: rgb(58, 119, 54);
+    font-weight: bold;
+    font-size: x-large;
    
 
 }
+
+.service img{
+
+    height: 40px;
+   padding-top:5px;
+
+}
+.contact {
+    padding: 60px 40px;
+    text-align: center;
+     background: linear-gradient(rgb(152, 255, 152));
+    
+}
+.contact-form{
+    max-width: 400px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    
+}
+
